# sarafun_online_motion_generation

./: README.md
lwr_description/launch/: lwr_robot.launch
lwr_description/urdf/: kuka_lwr_arm.gazebo  kuka_lwr_arm.xacro  lwr_robot.urdf
sarafun_hqp_omg/: CMakeLists.txt  package.xml  run.sh  rviz_abb.rviz
sarafun_hqp_omg/action/: OnlineMotion.action
sarafun_hqp_omg/include/: hqp_wrapper.h  obsav_controller.h  obstacle.h
sarafun_hqp_omg/launch/: .hqp.launch.swp  hqp.launch
sarafun_hqp_omg/msg/: obstacle.msg
sarafun_hqp_omg/src/: hqp_wrapper.cpp  main.cpp  obsav_controller.cpp  obstacle.cpp
sarafun_hqp_omg/srv/: addObs.srv
